gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail23109.d
version https://git-lfs.github.com/spec/v1
oid sha256:62c9a0a182e74e168291965a42f94fbf6a869854acad40b801381641d4c7e239
size 723
